--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Primary theme color of the app (sets background color of app bar) -->
-        <item name="colorPrimary">#ff0000</item>
+        <item name="colorPrimary">#fe0000</item>
         <!-- Background color of buttons in the app -->
         <item name="colorButtonNormal">#ff0000</item>
     </style>
